--- a/CIS174_TestCoreApp-master/Assignment_5_1_StarterCode/CIS174_TestCoreApp/Views/Shared/_Layout.cshtml
+++ b/CIS174_TestCoreApp-master/Assignment_5_1_StarterCode/CIS174_TestCoreApp/Views/Shared/_Layout.cshtml
@@ -46,6 +46,9 @@
                             <li><a asp-area="" asp-controller="CreatePerson" asp-action="Index">Assignment 7.1</a></li>
                             <li>
                                 <a href="#"></a>
+                            <li><a asp-area="" asp-controller="FamousPeople" asp-action="Index">Assignment 10.1</a></li>
+                            <li>
+                                <a href="#"></a>
 
                         </ul>
                     
